Revision history for HTML-Widget-Factory

{{$NEXT}}

0.201     2014-02-24 13:58:58-05:00 America/New_York
        - fix AUTOLOAD method to skip CLONE and DESTROY

0.200     2014-02-21 16:17:04-05:00 America/New_York
        - plugins are no longer blessed into newly created, managed packages,
          but use AUTOLOAD to dispatch to plugins
        - plugins on the factory are stored as objects, not class names
        - the Input, Password, and Textarea plugins have been given a
          default_classes attribute

0.101     2013-09-14 18:35:29 America/New_York
        - fix bugs in default object caching; this code really needs to be
          slashed, burned, and replanted
        - fix bugs in dist metadata

0.100     2013-09-12 14:53:50 America/New_York
        - plugins are no longer exporters; the factory factory interrogates
          them to build the new factory

        - there is a private, experimental method to allow the factory factory
          to build tweaked widget method when installing; read the source for
          more

0.083     2013-09-11 10:47:02 America/New_York
        - repackage to update bugtracker and repo
        - stop using -T in test shebangs
        - use parent.pm

0.082     2010-05-04
          make "disabled" a bool arg for Checkbox

0.081     2010-05-03
          when emitting <label> for radio, assume label is literal HTML
          for backcompat

0.080     2010-05-03
          switch from Class::ISA to MRO::Compat
          radio inputs now produce their content as label elements, not text
          fix "disabled" to be an attribute arg on input

0.070     2009-06-30
          add SYNOPSIS section to plugins for quick reference

0.069     2008-12-18
          radio buttons with content did not get closing tags even in XML
          work around this

0.068     2008-09-22
          chomp the output of link widgets

0.067     2008-05-06
          add ->provides_widget and ->provided_widgets methods to Factory